# storage

./: .gitmodules  DEVELOPMENT.md  Dockerfile  README.md  Submission_guidelines.md  benchmark.py  benchmark.sh  mlpstorage.yaml  pyproject.toml  report.py  requirements.txt  system_configuration.yaml
.github/: CODEOWNERS
ansible/: README.md  docker.yml  inventory  readme.md  setup.yml
ansible/collections/: requirements.yml
benchmark/: cli.py  config.py  logging.py  rules.py  utils.py
configs/dlio/: config.yaml
configs/dlio/checkpointing/: llama_1t.yaml  llama_405b.yaml  llama_70b.yaml  llama_70b_zero3.yaml  llama_8b_zero3.yaml
configs/dlio/training/: cosmoflow_datagen.yaml  cosmoflow_h100.yaml  resnet50_a100.yaml  resnet50_v100.yaml
configs/dlio/workload/: cosmoflow_a100.yaml  cosmoflow_datagen.yaml  cosmoflow_v100.yaml  llama3_1t.yaml  llama3_405b.yaml  llama3_70b.yaml  llama3_8b.yaml  resnet50_datagen.yaml  resnet50_h100.yaml  unet3d_a100.yaml  unet3d_datagen.yaml  unet3d_h100.yaml  unet3d_v100.yaml
configs/vectordbbench/: 10m.yaml  default.yaml
mlpstorage/: DEFINING_RULES_CHECKS.md  __init__.py  benchmark.py  cli.py  config.py  debug.py  history.py  logging.py  main.py  mlps_logging.py  reporting.py  rules.py  submission_checker.py  utils.py
mlpstorage/benchmarks/: __init__.py  base.py  dlio.py  vectordbbench.py
sample-results/run0/2023-04-04-11-32-50/: 0_output.json  1_output.json  2_output.json  3_output.json  per_epoch_stats.json  summary.json
sample-results/run0/2023-04-04-11-33-37/: 0_output.json  1_output.json  2_output.json  per_epoch_stats.json  summary.json
sample-results/run0/2023-04-04-11-34-32/: 0_output.json  1_output.json  per_epoch_stats.json  summary.json
sample-results/run1/2023-04-04-11-35-42/: 0_output.json  1_output.json  2_output.json  3_output.json  per_epoch_stats.json  summary.json
sample-results/run1/2023-04-04-11-36-32/: 0_output.json  1_output.json  2_output.json  per_epoch_stats.json  summary.json
storage-conf/workload/: bert.yaml  cosmoflow_a100.yaml  cosmoflow_h100.yaml  resnet50_a100.yaml  resnet50_h100.yaml  unet3d.yaml  unet3d_a100.yaml  unet3d_h100.yaml
test/: run_tests.sh
(+31 files in other folders)
