[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpstorage"
version = "2.0.0b1"
description = "MLPerf Storage Benchmark Suite"
readme = "README.md"
authors = [
    {name = "MLCommons Storage Working Group"}
]
requires-python = ">=3.10.0"
dependencies = [
	     #    "dlio-benchmark @ git+https://github.com/argonne-lcf/dlio_benchmark.git@mlperf_storage_v2.0",
    "psutil>=5.9",
    "pyarrow"
]

[project.urls]
"Homepage" = "https://github.com/mlcommons/storage"
"Bug Tracker" = "https://github.com/mlcommons/storage/issues"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"mlpstorage" = ["../configs/dlio/workload/*.yaml"]

[project.scripts]
mlpstorage = 'mlpstorage.main:main'